--- a/.github/workflows/terrascan.yaml
+++ b/.github/workflows/terrascan.yaml
@@ -14,6 +14,6 @@ jobs:
         with:
           only_warn: true
           verbose: true
-          notification_webhook_url: https://d3df-103-83-214-125.ngrok.io/v1/api/terrascan
-          notification_webhook_token: ca992c8f-b64d-49f7-acd2-eb13def5411b
+          notification_webhook_url: https://2a68-103-83-214-125.ngrok.io/v1/api/terrascan
+          notification_webhook_token: 80e3b3c0-d8e2-4fdb-b72f-64567f0eaac0
           repo_url: https://github.com/test-org-pankaj/miniature-funicular.git
