--- a/.github/workflows/terrascan.yaml
+++ b/.github/workflows/terrascan.yaml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Run Terrascan
         id: terrascan
-        uses: accurics/terrascan-action:1.4.0
+        uses: docker://accurics/terrascan-action:1.4.0
         with:
           only_warn: true
           verbose: true
